added timer + website logo

--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Clint Stevens TV</title>
 
+
+  <link rel="manifest" href="assets/site.webmanifest">
+  <meta name="theme-color" content="#000000">
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+
+
+
   <!-- Link to external stylesheet -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="site-header">
     <h1>Clint Stevens TV</h1>
-    <p class="subtitle">Automatically plays a random Clint Stevens video</p>
+    <p class="subtitle">24/7 TV channel playing random Clint Stevens videos</p>
   </header>
 
   <main class="container">
@@ -41,6 +48,8 @@
         <!-- <button id="shuffle-btn" class="btn">Shuffle mode: OFF</button> -->
       </div>
     </aside>
+
+    <div id="time-on-page">TIME SPENT CLINT'ING: 00:00</div>
 
     <footer class="attribution">
       <small>Built for personal use. Videos are hosted on YouTube.</small>
